--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -4,7 +4,7 @@
     transition: background-color 0.3s ease;
   }
   
-  .sticky {
+  .stickyy {
     position: fixed;
     top: 0;
     width: 100%;
