--- a/src/Components/HeaderTwo.css
+++ b/src/Components/HeaderTwo.css
@@ -1,7 +1,7 @@
 /* Add this to your existing CSS */
 
 .sticky-header-container {
-    transition: background-color 0.3s ease;
+    transition: white 0.3s ease;
   }
   
   .sticky {
